syntax = "proto3";

// import "google/protobuf/timestamp.proto";

option csharp_namespace = "OpenBr.LaborTaxes.Contract";

// service definitions
service LaborTaxes {
	rpc CalculateInss (CalculateInssRequest) returns (CalculateInssReply);
	rpc CalculateIrpf (CalculateIrpfRequest) returns (CalculateIrpfReply);
	rpc CalculateNetRevenue (CalculateNetRevenueRequest) returns (CalculateNetRevenueReply);
}

// enum types
enum InssType {
    worker = 0;
    individual = 1;
    managing_partner = 2;
}

// message contracts
message CalculateInssRequest {
	InssType inss_type = 1;
	double revenue = 2;
	string reference_date = 3;
}
message CalculateInssReply {
	bool success = 1;
	double rate = 2;
	double amount = 3;
	bool is_limit = 4;
	string errors = 5;
}

message CalculateIrpfRequest {
	double revenue = 1;
	double inss_value = 2;
	int32 dependents_number = 3;
}
message CalculateIrpfReply {
	bool success = 1;
	double calculation_basis = 2;
	double rate = 3;
	double amount = 4;
	double dependents_deduction_amount = 5;
	string errors = 6;
}

message CalculateNetRevenueRequest {
	InssType inss_type = 1;
	double revenue = 2;
	int32 dependents_number = 3;
}
message CalculateNetRevenueReply {
	CalculateInssReply inss = 1;
	CalculateIrpfReply irpf = 2;
	double net_revenue = 3;
	string errors = 4;
}